kubernetes/prod/apps/database/networkpolicy.yaml
---
# yaml-language-server: $schema=https://raw.githubusercontent.com/datreeio/CRDs-catalog/main/cilium.io/ciliumnetworkpolicy_v2.json
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: database-net-pol
spec:
  endpointSelector:
    matchLabels: {}
  # EGRESS
  egress:
    - toEndpoints:
        - matchLabels:
            "k8s:io.kubernetes.pod.namespace": database
  # INGRESS
  ingress:
    - fromEndpoints:
        - matchLabels:
            app.kubernetes.io/name: prometheus
            "k8s:io.kubernetes.pod.namespace": monitoring
      toPorts:
        - ports:
            - port: "9121"
              protocol: "TCP"
    - fromEndpoints:
        - matchLabels:
            "k8s:io.kubernetes.pod.namespace": database
    # Allow cnpg monitoring from prometheus@monitoring on port 9187/tcp
    - fromEndpoints:
        - matchLabels:
            app.kubernetes.io/name: prometheus
            "k8s:io.kubernetes.pod.namespace": monitoring
      toPorts:
        - ports:
            - port: "9187"
              protocol: "TCP"
    # Allow cnpg postgres from authentik@security on port 5432/tcp
    - fromEndpoints:
        - matchLabels:
            app.kubernetes.io/name: authentik
            "k8s:io.kubernetes.pod.namespace": security
      toPorts:
        - ports:
            - port: "5432"
              protocol: "TCP"
    # Allow cnpg postgres from grafana@monitoring on port 5432/tcp
    - fromEndpoints:
        - matchLabels:
            app.kubernetes.io/name: grafana
            "k8s:io.kubernetes.pod.namespace": monitoring
      toPorts:
        - ports:
            - port: "5432"
              protocol: "TCP"
    # Allow cnpg postgres from outline@selfhosted on port 5432/tcp
    - fromEndpoints:
        - matchLabels:
            app.kubernetes.io/name: outline
            "k8s:io.kubernetes.pod.namespace": selfhosted
      toPorts:
        - ports:
            - port: "5432"
              protocol: "TCP"
    # Allow pgvecto postgres from immich@media on port 5432/tcp
    - fromEndpoints:
        - matchLabels:
            app.kubernetes.io/name: immich
            "k8s:io.kubernetes.pod.namespace": media
      toPorts:
        - ports:
            - port: "5432"
              protocol: "TCP"
